# Poly_Bot

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: bot.example.toml
docs/superpowers/plans/: 2026-05-12-polymarket-btc-trading-bot.md  2026-05-13-dashboard-control-ui.md  2026-05-13-paper-trade-limits-analytics.md  2026-05-13-trading-quality-strategies.md
docs/superpowers/specs/: 2026-05-12-polymarket-btc-trading-bot-design.md  2026-05-13-dashboard-control-ui-design.md  2026-05-13-paper-trade-limits-analytics-design.md  2026-05-13-trading-quality-strategies-design.md
src/polybot/: audit_log.py  bot.py  cli.py  config.py  market_discovery.py  models.py  orderbook.py  positions.py  price_feeds.py  risk.py  staking.py  state_store.py
src/polybot/dashboard/: __init__.py  app.py  control.py
src/polybot/dashboard/static/: app.js  index.html  styles.css
src/polybot/execution/: __init__.py  base.py  live.py  paper.py
src/polybot/strategies/: __init__.py  base.py  baseline_momentum.py  late_window.py  late_window_5m.py  trend_following.py
tests/: test_bot_loop.py  test_cli_run.py  test_config.py  test_dashboard.py  test_dashboard_control.py  test_dashboard_js.py  test_execution.py  test_market_discovery.py  test_orderbook.py  test_positions.py  test_price_feeds.py  test_risk_and_staking.py  test_state_store.py  test_strategies.py
